# sable-lang

./: Cargo.toml  README.md  index.html
crates/sable_hir/: Cargo.toml
crates/sable_mir/: Cargo.toml
crates/sable_mir/src/: builder.rs  error.rs  lib.rs  lowering.rs
crates/sable_mir/src/error/: void_illegal.rs
crates/sable_mir/src/mir/: builder.rs  error.rs  function.rs  instruction.rs  mod.rs  module.rs  value.rs
crates/sable_mir/src/mir/function/: block.rs  param.rs
crates/sable_mir/src/mir/instruction/: alloca.rs  assign_inst.rs  binary.rs  binary_inst.rs  call.rs  define_inst.rs  load.rs  ret.rs  store.rs
crates/sable_mir/src/mir/value/: constant.rs
crates/sable_parser/: Cargo.toml
crates/sable_parser/src/: info.rs  lib.rs  position.rs
crates/sable_parser/src/ast/: ast.rs  expression.rs  function.rs  mod.rs  statement.rs
crates/sable_parser/src/ast/expression/: assign_expr.rs  binary_expr.rs  block_expr.rs  call_expr.rs  literal_expr.rs  null_expr.rs  variable_expr.rs
crates/sable_parser/src/ast/statement/: let_stmt.rs  return_stmt.rs  var_decl_stmt.rs
crates/sable_parser/src/lexer/: lexer.rs  token.rs
crates/sable_parser/src/parser/: error.rs  parser.rs
crates/sable_parser/src/parser/error/: lexer_err.rs  unexpected_token.rs
crates/sable_sema/: Cargo.toml
crates/sable_sema/src/: error.rs  lib.rs  resolver.rs  scope.rs  sema.rs
crates/sable_sema/src/checks/: expr_check.rs  inference.rs  mod.rs  stmt_check.rs
crates/sable_sema/src/error/: expr_errs.rs  func_already_defined.rs  func_checks.rs  var_redeclared.rs
src/: main.rs
