[package]
name = "sable-lang"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/sable_parser"]
resolver = "3"

[workspace.dependencies]
phf = "0.11.3"
ariadne = "0.5.1"
smallvec = "1.15.0"
serde = { version = "1.0.219" }

[dependencies]
sable_parser = { path = "crates/sable_parser", features = ["serde"] }
ariadne = { workspace = true }
smallvec = { workspace = true }
serde_json = "1.0.140"
