[package]
name = "sable-lang"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/sable_mir", "crates/sable_parser", "crates/sable_sema"]
resolver = "3"

[workspace.dependencies]
phf = "0.11.3"
ariadne = "0.5.1"
smallvec = "1.15.0"
serde = "1.0.219"
pretty = "0.12.4"
sable_parser = { path = "crates/sable_parser" }
sable_sema = { path = "crates/sable_sema" }
sable_mir = { path = "crates/sable_mir" }

[dependencies]
sable_parser = { workspace = true, features = ["serde"] }
sable_sema = { workspace = true }
sable_mir = { workspace = true }
ariadne = { workspace = true }
serde_json = "1.0.140"
